--- a/QuyetDeProject/package.json
+++ b/QuyetDeProject/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "QuyetDeProject",
+  "name": "quyetde",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.4.1"
   }
 }
